# Reversi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/reversi/: config.h
headers/reversi/engine/: AI.h  Board.h  Engine.h  Error.h  Event.h  Library.h  Logging.h  Player.h  Position.h  State.h  Threads.h  Time.h  Traverse.h  Tree.h
headers/reversi/frontend/: BoardController.h  BoardModel.h  BoardRender.h  ReversiApp.h  ReversiBoard.h  ReversiFrame.h  ReversiSession.h  base.h
source/: main.cpp
source/engine/: AI.cpp  Board.cpp  Engine.cpp  Error.cpp  Library.cpp  Logging.cpp  Openings.cpp  Player.cpp  Position.cpp  State.cpp  StateHelpers.cpp  Threads.cpp  Traverse.cpp  Tree.cpp
source/frontend/: BoardRender.cpp  ReversiApp.cpp  ReversiBoard.cpp  ReversiFrame.cpp  ReversiSession.cpp
